transform to new blog theme

--- a/_includes/default.html
+++ b/_includes/default.html
@@ -95,13 +95,13 @@
 	<div class="col-sm-9 col-sm-offset-3">
 		{{ content }}
 
-		<footer>
-			<hr/>
-			<p>
-				&copy; {{ site.time | date: '%Y' }} {{ site.author.name }} with Jekyll. Theme: <a href="https://github.com/dbtek/dbyll">dbyll</a> by dbtek.
-			</p>
-		</footer>
-	</div>
+	<!-- 	<footer> -->
+	<!-- 		<hr/> -->
+	<!-- 		<p> -->
+	<!-- 			&copy; {{ site.time | date: '%Y' }} {{ site.author.name }} with Jekyll. Theme: <a href="https://github.com/dbtek/dbyll">dbyll</a> by dbtek. -->
+	<!-- 		</p> -->
+	<!-- 	</footer> -->
+	<!-- </div> -->
 
 	<script type="text/javascript" src="{{ site.BASE_PATH }}/assets/resources/jquery/jquery.min.js"></script>
 	<script type="text/javascript" src="{{ site.BASE_PATH }}/assets/resources/bootstrap/js/bootstrap.min.js"></script>
