--- a/_includes/post.html
+++ b/_includes/post.html
@@ -72,7 +72,7 @@
 		<hr>
 
 		<div>
-      <section class="share col-sm-6">
+      <section class="share col-sm-8">
         <h4 class="section-title">Share Post</h4>
         <a class="btn btn-default btn-sm twitter" href="http://twitter.com/share?text={{page.title | encode}}{% if site.author.twitter%}&via={{site.author.twitter}}{% endif %}"
            onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
@@ -91,7 +91,7 @@
         </a>
       </section>
 
-      <section class="col-sm-6 author">
+      <section class="col-sm-8 author">
         <!-- <img src="http://www.gravatar.com/avatar/{{site.author.email_md5}}" class="img-rounded author-image" /> -->
         <h4 class="section-title author-name">{{site.author.name}}</h4>
         <p class="author-bio">{{site.author.bio}}</p>
@@ -114,10 +114,28 @@
 		</ul>
 
 		<hr>
+
+  <div class="comment">
+    <div id="disqus_thread"></div>
+    <script type="text/javascript">
+      /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+    var disqus_shortname = 'dp90219githubio'; // required: replace example with your forum shortname
+
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function() {
+     var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+     dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+     (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+     })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+  </div>
 	</div>
 	
-	<div class="col-sm-2 sidebar-2">
+	<div class="col-sm-1 sidebar-2">
 	
 	</div>
 </article>
 <div class="clearfix"></div>
+
+
