add singflying banner in sidebar
change post grid

change post grid

change post grid

add singflying banner in sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -60,4 +60,14 @@
 		</li>
 	</ul>
 </div>
+
+<header class="sidebar-header singflying" role="banner">
+	<a href="{{ site.singflying.url }}/">
+    <img src="{{ site.singflying.image }}" class="img-circle" width=150 />
+	</a>
+	<h3 class="title">
+        <a href="{{ site.singflying.url }}/">{{ site.singflying.name }}</a>
+    </h3>
+</header>
+
 <! -- sidebar.html end -->
