--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,10 +4,14 @@ body{
 	color: #2c3e50;
 }
 
+.singflying {
+  margin-top: 5em;
+}
+
 .sidebar {
 	position: fixed;
 	top: 0px;
-	padding-top: 10%;
+	padding-top: 6%;
 	background-color: #2c3e50;
 	color: #fff;
 }
