--- a/_includes/post.html
+++ b/_includes/post.html
@@ -109,33 +109,56 @@
 		  {% if page.next %}
 		  <li class="next"><a href="{{ site.BASE_PATH }}{{ page.next.url }}" title="{{ page.next.title }}">Next &rarr;</a></li>
 		  {% else %}
-			<li class="next disabled"><a>Next &rarr;</a>
+      <li class="next disabled"><a>Next &rarr;</a></li>
 		  {% endif %}
 		</ul>
 
 		<hr>
 
-  <div class="comment">
-    <div id="disqus_thread"></div>
-    <script type="text/javascript">
-      /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-    var disqus_shortname = 'dp90219githubio'; // required: replace example with your forum shortname
+    <div class="commnet">
+      <!--高速版，加载速度快，使用前需测试页面的兼容性-->
+      <div id="SOHUCS"></div>
+      <script>
+        (function(){
+          var appid = 'cyrrBECij',
+          conf = 'prod_12ce90be7fd2cc8cbfa37cb1909289f6';
+          var doc = document,
+          s = doc.createElement('script'),
+          h = doc.getElementsByTagName('head')[0] || doc.head || doc.documentElement;
+          s.type = 'text/javascript';
+          s.charset = 'utf-8';
+          s.src =  'http://assets.changyan.sohu.com/upload/changyan.js?conf='+ conf
+          +'&appid=' + appid;
+          h.insertBefore(s,h.firstChild);
+          window.SCS_NO_IFRAME = true;
+        })()
+      </script> 
 
-    /* * * DON'T EDIT BELOW THIS LINE * * */
-    (function() {
-     var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-     dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-     (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-     })();
-    </script>
-    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-  </div>
+    </div>
+
+  <!-- <div class="comment"> -->
+  <!--   <div id="disqus_thread"></div> -->
+  <!--   <script type="text/javascript"> -->
+  <!--     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */ -->
+  <!--   var disqus_shortname = 'dp90219githubio'; // required: replace example with your forum shortname -->
+
+  <!--   /* * * DON'T EDIT BELOW THIS LINE * * */ -->
+  <!--   (function() { -->
+  <!--    var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true; -->
+  <!--    dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js'; -->
+  <!--    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq); -->
+  <!--    })(); -->
+  <!--   </script> -->
+  <!--   <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript> -->
+  <!-- </div> -->
 	</div>
 	
 	<div class="col-sm-2 sidebar-2">
 	
 	</div>
 </article>
-<div class="clearfix"></div>
+<div class="clearfix">
+
+</div>
 
 
