--- a/_includes/post.html
+++ b/_includes/post.html
@@ -115,6 +115,12 @@
 
 		<hr>
 
+    <script type="text/javascript" src="http://assets.changyan.sohu.com/upload/plugins/plugins.count.js">
+    </script>
+          
+    <a href="#SOHUCS" id="changyan_count_unit"></a>//评论数
+    <a href="#SOHUCS" id="changyan_parti_unit"></a>//参与数
+
     <div class="commnet">
       <!--高速版，加载速度快，使用前需测试页面的兼容性-->
       <div id="SOHUCS"></div>
@@ -135,6 +141,16 @@
       </script> 
 
     </div>
+
+    <!-- 表情 -->
+    <!-- div标签放在页面需要展示的位置  -->
+    <!-- <div id="cyEmoji" role="cylabs" data-use="emoji"></div> -->
+    <div id="cyHotnews" role="cylabs" data-use="hotnews"></div>
+    <!-- 如果页面已有畅言的评论框，以下代码放在评论框代码的后面，来读取评论框的配置，否则需在div标签或代码中配置sid、cid(分类id)
+    -->
+    <!-- 如果页面同时使用多个实验室项目，以下代码只需要引入一次，只配置上面的div标签即可 -->
+    <!-- 如需修改默认配置，请到changyan.sohu.com后台进行配置 -->
+    <script type="text/javascript" charset="utf-8" src="http://changyan.itc.cn/js/??lib/jquery.js,changyan.labs.js?appid=cyrrBECij"></script>
 
   <!-- <div class="comment"> -->
   <!--   <div id="disqus_thread"></div> -->
